# TrackingMod

./: .cproject  .project  6737.root  Analysis.sh  CMakeLists.txt  LeakageCurrentData.csv  PAR2.sh  RPC-MT1.txt  Sim.sh  TPR2.sh  cleanupTracks.sh  cmd.file  doc.txt  earth.C  exist.cpp  exist2.cpp  info.txt  mapping.txt  refComments.odt  refComments_R2.docx  setup.xml  setup3.xml  test.sh  testMapping.txt
CAEN/TDC/: CMakeLists.txt  trialruns.sh
CAEN/TDC/.svn/: entries
CAEN/TDC/IniFiles/: rpc.ini
CAEN/TDC/inc/: A1.h  A1_Mod.h  Analysis.h  BSCDataReader.h  BSCModule.h  BSCModuleV1721.h  IniFile.h  ModuleV1190.h  ModuleV1190Data.h  ModuleV2718.h  ModuleVmeInterface.h  adc_v1721_caen.hh
CAEN/TDC/src/: BSCDataReader.cpp  ModuleV1190.cpp  ModuleV2718.cpp  adc_v1721_caen.cc
CAEN/TDC/test/: daq904.cc
CoordinateGenerator/: CMakeLists.txt
CoordinateGenerator/inc/: Coordinates.h  TestClass.h
CoordinateGenerator/src/: Coordinates.cpp  TestClass.cpp
CoordinateGenerator/test/: CMakeLists.txt  DetectorInfo.cpp  TestCoordinates.cpp  TestCoordinates2.cpp  Testing.cpp  Testing2.cpp
Cry/: CMakeLists.txt  setup  setup.file
Cry/test/: testDistribution.cc
Gui/gui/: CMakeLists.txt  CMakeLists.txt.old
Gui/gui/inc/: AllPlaneLayout.h  AllRunLayout.h  DetectorLayout.h  HorizontalLayout.h  PlaneLayout.h  RootFilesWindow.h  Run.h  SetupLayout.h  VerticalLayout.h
Gui/gui/src/: AllPlaneLayout.cpp  AllRunLayout.cpp  DetectorLayout.cpp  HorizontalLayout.cpp  PlaneLayout.cpp  RootFilesWindow.cpp  Run.cpp  SetupLayout.cpp  VerticalLayout.cpp
Gui/gui/test/: TestProg.cpp  TestQt.cpp  TestQtXML.cpp
Simulations/MST/: CMakeLists.txt  main.cpp
Simulations/MST/MacFiles/: my.mac.bk  my.mac.temp  test.mac  testNew.mac  vis.mac
Simulations/MST/inc/: B1EventAction.hh  B1Run.hh  B1RunAction.hh  B1SteppingAction.hh  B2aDetectorMessenger.hh  GeantVisualizer.h  HodoScope.h  HodoScope.txt  HodoScope2.h  MyPhysics.h  Scatterers.h
Simulations/MST/scripts/: test.sh
Simulations/MST/src/: .MyDetectorConstruction.cpp.swp  B1ActionInitialization.cc  B1EventAction.cc  B1Run.cc  B1RunAction.cc  B1SteppingAction.cc  B2aDetectorMessenger.cc  HodoScope.cpp  HodoScope.txt  HodoScope2.cpp  MyDetectorConstruction.cpp  MyPhysics.cpp  MyPrimaryGeneratorAction.cpp
Simulations/MST/test/: .Reconstruct.cpp.swp  Reconstruct.cpp  Reconstruct.cpp.bk  SD.cpp  ScatteringHistogram.cpp  SimpleHist.cpp  SimpleSD.cpp
TemplatizedInterface/: CMakeLists.txt
TemplatizedInterface/inc/: .Plane.h.swp  CmsRpc.h  DetectorFactory.h  DetectorMapping.h  Detectors.h  Event.h  EventProcessor.h  Factory.h  GenericDetector.cpp  GenericDetector.h  GenericXYDetector.h  GlassRpc.h  HittedPixel.h  LinesAngle.h  Paddle.h  Properties.h  Scintillator.h  ScintillatorPlane.h  Setup.h  SetupManager.h  SimulateScatteredTracks.h  Statistics.h  Track.h  Tree.h  TriggeringPlane.h  Update.h  VisualizationHelper.h  Voxel.h  Voxelator.h
TemplatizedInterface/inc/visualization/: Update_Evolution.h
TemplatizedInterface/src/: CmsRpc.cpp  DetectorFactory.cpp  DetectorMapping.cpp  Event.cpp  EventProcessor.cpp  Factory.cpp  GenericXYDetector.cpp  GlassRpc.cpp  Global.cpp  Imaging.cpp  LinesAngle.cpp  Paddle.cpp  Properties.cpp  Scintillator.cpp  ScintillatorPlane.cpp  Setup.cpp  SetupManager.cpp  SimulateScatteredTracks.cpp  Statistics.cpp  Tree.cpp  TriggeringPlane.cpp  VisualizationHelper.cpp  Voxel.cpp  Voxelator.cpp
TemplatizedInterface/test/: CMakeLists.txt  Debug.cpp  DetectorInfo.cpp  GlassRpc_NewTest.cpp  GlassRpc_test.cpp  JustEfficiency.cpp  Plane_test.cpp  ScintillatorPlane_test.cpp  StripTest.cpp  TestBranchNames.cpp  TestDet.cpp  TestEfficiency.cpp  TestLineset.cpp  TestMultihit.cpp  TestROOTTree.cpp  TestSetup.cpp  TestStat.cpp  TestTree.cpp  TestTrgPlane.cpp  TestValidation.cpp  TwoDPattern.cpp
TemplatizedInterface/test/cgal/: TestWlop.cpp
TemplatizedInterface/test/core/: ChopPoca.cpp  ConvertData.cpp  Debug.cpp  DetectorInfo.cpp  DistributedDensityVoxel.cpp  HashCodeNew.cpp  HistogramCountingTest.cpp  JustEfficiency.cpp  JustEfficiencyXML.cpp  OfflineRunEventHelper.cpp  OfflineSDbased.cpp  OfflineThresholdTest.cpp  ProcessDataFile.cpp  ReadDaqInfo.cpp  StripTest.cpp  Test2DLinearFit.cpp  Test3DHistProjection.cpp  TestBSTTrackPredictorWithSimulatedData.cpp  TestClustering.cpp  TestCoreFunctions.cpp  TestDelta.cpp  TestDetectorMapping.cpp  TestDir.cpp  TestFiles.cpp  TestFit.cpp  TestImaging.cpp  TestMLEM.cpp  TestMuonDirection.cpp  TestMysql.cpp  TestObjectChecker.cpp  TestPOCA.cpp  TestPixel.cpp  TestPixel.raman  TestPoca.cpp  TestReadOneEvent.cpp  TestSHA256.cpp  TestScatteringAndPoCALocation.cpp  TestScatteringDensity.cpp  TestSetupHitDistribution.cpp  TestSetupRead.cpp  (+24 more)
TemplatizedInterface/test/plots/: DeviationFromFittedPt.cpp  (+30 more)
gmm/: CMakeLists.txt  gauss2D.txt  test.txt  test2.C  testFilter2.C
gmm/include/: GMM.h  GMM1D.h  GMM2D.h  GMM3D.h  GMMND.h  Gaussian.h  Gaussian1D.h  Gaussian2D.h  Gaussian3D.h
gmm/src/: GMM.cpp  Gaussian.cpp
gmm/test/: TestEigen.cpp  TestGaussian.cpp  TestGmm.cpp  TestGmm2D.cpp  TestGmm3D.cpp  TestGmmND.cpp
ismran/PositionEstimation/: CMakeLists.txt  Test_ZFromQ_UsingQParameteriztion.cpp  calibQ.root  completeCalib2.root  readCharacterization.sh
ismran/analysis_V2/: CMakeLists.txt  MuonTG_dv453_cfg.txt  bulkProcessor.sh  bulkRollover.sh  checkSystemHealth.sh  comparisonUsingNumOfEvents.sh  completeCalib2.root  muonParam.root  rollOverDetection.sh  runshots.sh  runshotsNew.sh  runshotsNew2.sh  runshotsTest.sh  split.py
ismran/simulations/: CMakeLists.txt  main.cpp
ismran/simulations_V2/: CMakeLists.txt  MuonRead.cpp
ismran/simulations_V3/: CMakeLists.txt  CMakeLists.txt.bk  ExactHitRead.cpp  MuonRead.cpp  MuonRead_V2.cpp  SampledAngle.cpp  TestManualCry.cpp  main.cpp  nnew.mac  test.txt  testRand.cpp
ismran/visualizer/: CMakeLists.txt  VisualizationHelper.cpp  VisualizationHelper.h
test/: CMakeLists.txt  ScintPattern.cpp  ShowerDetectionTest.cpp  TestCmsRpc.cpp  TestSetupManager.cpp  TestVisualization.cpp  TestVisualization2.cpp
xmldom/: CMakeLists.txt  main.cpp  setup.xml
(+652 files in other folders)
